manifests/tetris-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
  namespace: tetris-game
spec:
  replicas: 2 # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris
        image: dushyantkumark/tetris-v1 # Replace with the actual image tag
        ports:
        - containerPort: 80 # Replace with the port your Tetris game listens on
